# lattica

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: EVENT_FABRIC.md  LATTICA_NOW.md  SENIOR_DEV_REVIEW.md  cerebra_read_adapter.md  cerebra_read_adapter_addendum.md  cerebra_read_adapter_design.md
docs/adjacent-project-info/: ADVOCATE_PROFILES.md  AGENT_TRACE_VOCABULARY.md  PROJECT_EXTRACTION_TEMPLATE.md  aistack_extract.md  cerebra_extract.md  cerebra_phase6_event_vocabulary.md  discord_bot_extract.md  lattica_response.md  lumaweave_extract.md  policy_scout_extract.md
docs/adr/: ADR-001-lattica-extends-lumaweave.md  ADR-002-es-toolkit-over-nats.md  ADR-003-eval-core-standalone.md  ADR-004-policy-scout-governance-scope.md  ADR-005-cerebra-api-surface.md  ADR-006-monorepo-structure.md  ADR-007-lumashell-pattern-absorption.md  ADR-008-phase-12-research-exploration.md  ADR-009-federated-frontend-hosting.md  ADR-010-cross-webview-ipc-channels.md  ADR-011-tauri-vite-react-scaffold.md  ADR-012-fossic-platform-store.md  ADR-013-port-allocation.md  ADR-014-canary-event-startup.md  ADR-015-platform-design-token-namespace.md  ADR-016-tile-registration-contract.md  ADR-017-payload-renderer-registry.md
docs/aseptic/: ADR_FORMAT.md  AGENT_BRIEFING.md  BLAST_RADIUS.md  BLAST_RADIUS_LOG.md  CROSS_POLLINATION.md  DEVIATION.md  INTRODUCTION.md  LIVING_REPORTS.md  MERGE_GATE_LOG.md  PASS_COMPLETE_LOG.md  PASS_REPORTING.md  POLISH_DEBT.md  README.md  SUPERVISOR_PROTOCOL.md  TECH_DEBT.md  UNIFIED_PASSAGE.md  VERSION_CONVENTION.md  aseptic-artifacts.md  aseptic-notes.md
docs/aseptic/blast-radius/: pass-0.0.0x.md  pass-0.0.0y.md  pass-0.0.0z.md  pass-0.1.0.md  pass-0.2.0.md  pass-0.2.1.a.md  pass-0.2.1.b.md  pass-0.2.1.c.md  pass-0.2.1u.md  pass-0.2.1v.md  pass-0.2.1w.md  pass-0.2.1x.md  pass-0.2.1y.md  pass-0.2.1z.md  pass-0.3.0.md  pass-0.3.1.md  pass-0.3.2.md  pass-0.3.2y.md  pass-0.3.2z.md  pass-0.3.3.md  pass-0.3.4.md  pass-0.3.5.md  pass-0.3.5k.md  pass-0.3.5l.md  pass-0.3.5m.md  pass-0.3.5n.md  pass-0.3.5o.md  pass-0.3.5p.md  pass-0.3.5q.md  pass-0.3.5r.md  pass-0.3.5s.md  pass-0.3.5t.md  pass-0.3.5u.md  pass-0.3.5v.md  pass-0.3.5w.md  pass-0.3.5x.md  (+15 more)
docs/coordination/: COORDINATION_PATTERNS.md  COORDINATION_PROTOCOL.md  CURRENT_STATES.md  INBOUND_LOG.md  OUTBOUND_LOG.md  PORTABLE_COMMS_SNIPPET.md  README.md  STATUS.md  SUPERVISION_MODEL.md  mail_routing.md  off-script-triage.md
docs/implement/: AGENT_TRACE_VOCABULARY.md  BUILD_AND_DISTRIBUTION.md  CCE_SPEC.md  FOSSIC_V1_SPEC.md  POLISH_DEBT.md  TECH_DEBT.md
docs/inference-setup/: README.md  docker-compose.example.yml  quickstart.md  relay.py  sidecar.py
docs/requirements/: COORDINATION_PROTOCOL.md  README.md  REQUEST_TEMPLATE.md  RESPONSE_TEMPLATE.md
docs/research/: lumaweave-patterns-reference.md  mode-b-webview-embedding.md  node-stack-audit.md
e2e/: lattica.spec.ts
fossic/: Cargo.toml
fossic/crates/fossic-tauri/: Cargo.toml  README.md
fossic/crates/fossic-tauri/examples/: basic.rs
fossic/crates/fossic-tauri/src/: commands.rs  lib.rs  serialization.rs
fossic/crates/fossic-tauri/tests/: read_range.rs
fossic/src/: reducers.rs
src/: App.css  App.tsx  main.tsx  registrations.ts  registrations.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: routing.test.ts  tileStorage.test.ts  useFossicSubscription.test.ts
src/hooks/: useFossicSubscription.ts
src/ipc/: postMessageBridge.ts
src/lib/: routing.ts  scopes.ts  tileStorage.ts
src/styles/: iter4-design-system.css  live-value-tokens.css  portfolio-tokens.css  project-accents.css
src/test-setup/: tauri-mock-core.ts  tauri-mock-event.ts
src/tiles/: HelloTile.css  HelloTile.tsx
src/types/: fossic.ts  live-value.ts
(+377 files in other folders)
