[workspace]
members = [".", "crates/fossic-tauri"]
resolver = "2"

[workspace.dependencies]
fossic            = { path = "." }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
rmp-serde         = "1"
crossbeam-channel = "0.5"
parking_lot       = "0.12"
tempfile          = "3"

# ──────────────────────────────────────────────────────────────────────────────

[package]
name = "fossic"
version = "1.8.1"
edition = "2021"
description = "Local-first event sourcing library with content-addressed event identity"
license = "MIT OR Apache-2.0"

[features]
default = ["agent-trace"]
agent-trace = []
encryption = []
similarity = []
tauri = []
test-helpers = []

[dependencies]
blake3                = "1"
rusqlite              = { version = "0.31", features = ["bundled"] }
serde                 = { workspace = true }
serde_json            = { workspace = true }
rmp-serde             = { workspace = true }
unicode-normalization = "0.1"
thiserror             = "2"
crossbeam-channel     = { workspace = true }
notify                = "6"
parking_lot           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
