[package]
name = "lattica"
version = "0.2.0"
description = "Lattica platform OS"
authors = []
edition = "2021"

[lib]
name = "lattica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fossic = { path = "../../fossic" }
fossic-tauri = { path = "../../fossic/crates/fossic-tauri" }
