[package]
name = "lattica"
version = "0.3.8"
description = "Lattica platform OS"
authors = ["Ryan Johnson"]
edition = "2021"

[lib]
name = "lattica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fossic       = "1.8.3"
fossic-tauri = "1.8.3"
reqwest      = { version = "0.12", default-features = false, features = ["json"] }
tokio        = { version = "1", features = ["macros"] }
