[package]
name = "fossic-tauri"
version = "1.8.1"
edition = "2021"
description = "Tauri 2 IPC companion crate for fossic"
license = "MIT OR Apache-2.0"

[features]
default = []
test-helpers = []

[dependencies]
fossic       = { workspace = true }
tauri        = { version = "2", default-features = false }
tauri-plugin = { version = "2", default-features = false }
serde        = { workspace = true }
serde_json   = { workspace = true }
parking_lot  = { workspace = true }
uuid         = { version = "1", features = ["v4"] }
base64       = "0.22"
shellexpand  = "3"
# Pin time to avoid cookie 0.18.1 coherence conflict (cookie was designed against time 0.3.36-0.3.37)
time         = "=0.3.37"

[dev-dependencies]
tempfile = { workspace = true }
tauri    = { version = "2", default-features = false, features = ["test"] }
